消除代码警告和替换过时方法